<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.simoncrafter</groupId>
    <artifactId>modded-hamster</artifactId>
    <version>ea1.0</version>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <!-- Here come other details
                ...
                -->
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>me.simoncrafter.de.hamster.workbench.Workbench</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <!-- Here come other details
                ...
                -->
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <filters>
                                <filter>
                                    <!-- exclude signature files that cause conflicts -->
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <!-- set your main class here -->
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>me.simoncrafter.de.hamster.workbench.Workbench</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>HelloFX</mainClass>
                </configuration>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
    </build>
    <repositories>
        <repository>
            <id>MVNRepo</id>
            <url>https://mvnrepository.com/artifact/com.github.bdeneuter/lejos-ev3-api</url>
        </repository>
        <repository>
            <id>github-bdeneuter</id>
            <url>https://maven.pkg.github.com/bdeneuter/lejos-ev3-api</url>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>local.lib</groupId>
            <artifactId>bcel</artifactId>
            <version>5.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/bcel-5.1.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>local.lib</groupId>
            <artifactId>bluecove</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/bluecove.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>local.lib</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/commons-cli-1.0.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>local.lib</groupId>
            <artifactId>cpptasks</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/cpptasks.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>local.lib</groupId>
            <artifactId>jtools</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/jtools.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>lejos.pc</groupId>
            <artifactId>pccomm</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/pccomm.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>lejos.pc</groupId>
            <artifactId>pctools</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/pctools.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>local.lib</groupId>
            <artifactId>jruby</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/jruby.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>local.lib</groupId>
            <artifactId>substance</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/substance.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>local.lib</groupId>
            <artifactId>jython</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/jython.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>local.lib</groupId>
            <artifactId>jogl-all</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/jogl-all.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>local.lib</groupId>
            <artifactId>gluegen-rt</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/gluegen-rt.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.sun</groupId>
            <artifactId>tools</artifactId>
            <version>1.8</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/tools.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>2.3</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.0.1</version> <!-- latest stable version -->
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>21</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx</artifactId>
            <version>11</version>
            <type>pom</type>
        </dependency>
    </dependencies>
</project>